# osm2population

./: CMakeLists.txt  Makefile  README.md  conanfile.txt
exemple_patterns/: marseille_bounds.geojson  population_patterns.json
include/: building.hpp  population_area.hpp
include/io/: parse_geojson.hpp  parse_geojson_buildings.hpp  parse_geojson_population_areas.hpp  parse_geojson_search_area.hpp  print_geojson_buildings.hpp  print_svg_buildings.hpp
src/: osm2population.cpp
src/io/: parse_geojson.cpp  parse_geojson_buildings.cpp  parse_geojson_population_areas.cpp  print_geojson_buildings.cpp  print_svg_buildings.cpp
